--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+        <div class="grid place-items-center h-screen content-center">
 		<slot />
+                </div>
 	</body>
 </html>
 <style is:global>
