--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,24 +15,9 @@ const { title } = Astro.props;
       <meta name="generator" content={Astro.generator} />
       <title>{title}</title>
     </head>
-    <body>
-      <div class="grid place-items-center h-screen content-center">
+    <body class="flex font-sans bg-slate-50 grid place-items-center top-02 align-top h-screen content-center">
+      <div class="flex-initial">
 	<slot />
       </div>
     </body>
   </html>
-
-<style is:global>
-  :root {
-    --accent: 124, 58, 237;
-    --accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background-color: #F6F6F6;
-  }
-  code {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-  }
-</style>
