enable dark mode font color

--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -71,7 +71,7 @@ const { title } = Astro.props;
       }
     </script>
   </head>
-  <body class="flex h-full flex-col bg-zinc-50 bg-white dark:bg-black">
+  <body class="flex h-full flex-col bg-zinc-50 bg-white dark:bg-black dark:text-zinc-100">
 
     <div class="fixed inset-0 flex justify-center sm:px-8">
       <div class="flex w-full max-w-7xl lg:px-8">
