--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@
               </div>
               <p class="text-sm text-zinc-400 dark:text-zinc-500">©
                 <!-- -->2022
-                <!-- --> Spencer Sharp. All rights reserved.
+                <!-- --> Lei W. All rights reserved.
               </p>
             </div>
           </div>
