--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -38,7 +38,7 @@ import Selfie from '../components/Selfie.astro'
               </div>
               <div class="flex justify-end md:flex-1">
                 <div class="pointer-events-auto">
-                  <button type="button" aria-label="Toggle dark mode" onClick="toggleMode()"
+                  <button id="darkModeButton" type="button" aria-label="Toggle dark mode" onClick="toggleMode()"
                           class="group rounded-full bg-white/90 px-3 py-2 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur transition dark:bg-zinc-800/90 dark:ring-white/10 dark:hover:ring-white/20">
                     <svg
                       viewBox="0 0 24 24" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
