--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,7 @@
 ---
-import Home from '../../layouts/Home.astro';
+import Blog from '../../layouts/Blog.astro';
 ---
 
-<Home>
-  MY BLOG HOME
-</Home>
+<Blog>
+MY BLOG HOME
+</Blog>
