Fix Article Layout

--- a/src/components/ArticleContent.astro
+++ b/src/components/ArticleContent.astro
@@ -8,6 +8,6 @@
     </time>
   </header>
   <div class="mt-8 prose dark:prose-invert">
-    Main Article Content
+    <slot />
   </div>
 </article>
