--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -5,7 +5,7 @@ import ImageBox from '../components/ImageBox.astro'
 import Self from '../components/Self.astro'
 import ContactForm from '../components/ContactForm.astro'
 import WorkList from '../components/WorkList.astro'
-import Article from '../components/Article.astro'
+import ArticleContent from '../components/ArticleContent.astro'
 
 export interface Props {
   title: string;
@@ -50,7 +50,9 @@ const { title } = Astro.props;
                         <path d="M7.25 11.25 3.75 8m0 0 3.5-3.25M3.75 8h8.5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       </svg>
                     </button>
-                    <Article />
+                    <ArticleContent>
+                      <slot />
+                    </ArticleContent>
                   </div>
 
                 </div>
