--- a/src/components/ArticleContent.astro
+++ b/src/components/ArticleContent.astro
@@ -7,7 +7,7 @@
       <span class="ml-3">September 5, 2022</span>
     </time>
   </header>
-  <div class="mt-8 prose dark:prose-invert">
+  <div class="mt-8 prose  prose-slate  dark:prose-invert">
     <slot />
   </div>
 </article>
