--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -11,7 +11,7 @@ export interface Props {
   title: string;
 }
 
-const { title } = Astro.props;
+const { title, frontmatter } = Astro.props;
 
 ---
 
@@ -50,7 +50,7 @@ const { title } = Astro.props;
                         <path d="M7.25 11.25 3.75 8m0 0 3.5-3.25M3.75 8h8.5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       </svg>
                     </button>
-                    <ArticleContent>
+                    <ArticleContent frontmatter={frontmatter}>
                       <slot />
                     </ArticleContent>
                   </div>
