--- a/src/components/ArticleContent.astro
+++ b/src/components/ArticleContent.astro
@@ -1,5 +1,9 @@
 ---
 const {frontmatter} = Astro.props
+import { format, parseISO } from 'date-fns';
+const builtAt: Date = parseISO(frontmatter.date);
+// console.log("date:", buildAt)
+const builtAtFormatted = format(builtAt, 'MM/dd/yyyy');
 ---
 
 <article>
@@ -8,7 +12,7 @@ const {frontmatter} = Astro.props
     <time datetime="2022-09-05" class="order-first flex items-center text-base text-zinc-400 dark:text-zinc-500">
       <span class="h-4 w-0.5 rounded-full bg-zinc-200 dark:bg-zinc-500">
       </span>
-      <span class="ml-3">{frontmatter.date}</span>
+      <span class="ml-3">{builtAtFormatted}</span>
     </time>
   </header>
   <div class="mt-8 prose  prose-slate  dark:prose-invert">
