--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -23,6 +23,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script src="../scripts/DarkMode.js"></script>
+    <script src="../scripts/BackButton.js"></script>
   </head>
   <body class="flex h-full flex-col bg-zinc-50 bg-white dark:bg-black dark:text-zinc-100">
 
@@ -45,11 +46,7 @@ const { title } = Astro.props;
               <div class="mx-auto max-w-2xl lg:max-w-5xl">
                 <div class="mx-auto grid max-w-xl grid-cols-1 gap-y-20 lg:max-w-none lg:grid-cols-2">
                   <div class="flex flex-col gap-16">
-                    <ArticleList />
-                  </div>
-                  <div class="space-y-10 lg:pl-16 xl:pl-24">
-                    <ContactForm />
-                    <WorkList />
+                    <slot />
                   </div>
                 </div>
               </div>
