--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -5,13 +5,13 @@ import ImageBox from '../components/ImageBox.astro'
 import Self from '../components/Self.astro'
 import ContactForm from '../components/ContactForm.astro'
 import WorkList from '../components/WorkList.astro'
-import ArticleContent from '../components/ArticleContent.astro'
+import ArticleList from '../components/ArticleList.astro'
 
 export interface Props {
   title: string;
 }
 
-const { title, frontmatter } = Astro.props;
+const { title } = Astro.props;
 
 ---
 
@@ -23,7 +23,6 @@ const { title, frontmatter } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script src="../scripts/DarkMode.js"></script>
-    <script src="../scripts/BackButton.js"></script>
   </head>
   <body class="flex h-full flex-col bg-zinc-50 bg-white dark:bg-black dark:text-zinc-100">
 
@@ -44,18 +43,10 @@ const { title, frontmatter } = Astro.props;
           <div class="mx-auto max-w-7xl lg:px-8">
             <div class="relative px-4 sm:px-8 lg:px-12">
               <div class="mx-auto max-w-2xl lg:max-w-5xl">
-                <div class="xl:relative">
-                  <div class="mx-auto max-w-2xl">
-                    <button id="go-back" type="button" aria-label="Go back to articles" class="group mb-8 flex h-10 w-10 items-center justify-center rounded-full bg-white shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5 transition dark:border dark:border-zinc-700/50 dark:bg-zinc-800 dark:ring-0 dark:ring-white/10 dark:hover:border-zinc-700 dark:hover:ring-white/20 lg:absolute lg:-left-5 lg:mb-0 lg:-mt-2 xl:-top-1.5 xl:left-0 xl:mt-0">
-                      <svg viewBox="0 0 16 16" fill="none" aria-hidden="true" class="h-4 w-4 stroke-zinc-500 transition group-hover:stroke-zinc-700 dark:stroke-zinc-500 dark:group-hover:stroke-zinc-400">
-                        <path d="M7.25 11.25 3.75 8m0 0 3.5-3.25M3.75 8h8.5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                      </svg>
-                    </button>
-                    <ArticleContent frontmatter={frontmatter}>
-                      <slot />
-                    </ArticleContent>
+                <div class="mx-auto grid max-w-xl grid-cols-1 gap-y-20 lg:max-w-none lg:grid-cols-2">
+                  <div class="flex flex-col gap-16">
+                    <slot />
                   </div>
-
                 </div>
               </div>
             </div>
