--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,7 +12,7 @@ const posts = await Astro.glob('../pages/blog/*.md')
       // var date = post.frontmatter.date ? post.frontmatter.date
       return <li>
                <h2 class="text-2xl">
-                 <time>{post.frontmatter.date}</time>
+                 <time class="text-lg text-zinc-400 dark:text-zinc-500">{post.frontmatter.date}</time>
                  <a href={post.url}>{post.frontmatter.title}</a>
                </h2>
              </li>
