--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import Selfie from '../components/Selfie.astro'
                 <div class="pointer-events-auto md:hidden" data-headlessui-state="">
                   <button
                     class="group flex items-center rounded-full bg-white/90 px-4 py-2 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10 dark:hover:ring-white/20"
-                    id="headlessui-popover-button-:R39cm:" type="button" aria-expanded="false"
+                    id="mobile-menu-button" type="button" aria-expanded="false"
                     data-headlessui-state="">Menu
                     <svg viewBox="0 0 8 6" aria-hidden="true"
                          class="ml-3 h-auto w-2 stroke-zinc-500 group-hover:stroke-zinc-700 dark:group-hover:stroke-zinc-400">
@@ -64,6 +64,15 @@ import Selfie from '../components/Selfie.astro'
                 </div>
               </div>
             </div>
+
+            <nav id="mobile-menu" class="hidden mt-6 mobile-menu md:hidden">
+              <ul class="-my-2 divide-y divide-zinc-100 text-base text-zinc-800 dark:divide-zinc-100/5 dark:text-zinc-300">
+                <li><a href="/">Home</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/projects">Projects</a></li>
+              </ul>
+            </nav>
+
           </div>
         </div>
       </div>
