--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -24,6 +24,7 @@ const { title, frontmatter } = Astro.props;
     <title>{title}</title>
     <script src="../scripts/DarkMode.js"></script>
     <script src="../scripts/BackButton.js"></script>
+    <script src="../scripts/NavMobileMenu.js"></script>
   </head>
   <body class="flex h-full flex-col bg-zinc-50 bg-white dark:bg-black dark:text-zinc-100">
 
