--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -24,6 +24,7 @@ const { title } = Astro.props;
     <title>{title}</title>
     <script src="../scripts/DarkMode.js"></script>
     <script src="../scripts/BackButton.js"></script>
+    <script src="../scripts/NavMobileMenu.js"></script>
   </head>
   <body class="flex h-full flex-col bg-zinc-50 bg-white dark:bg-black dark:text-zinc-100">
 
@@ -44,7 +45,7 @@ const { title } = Astro.props;
           <div class="mx-auto max-w-7xl lg:px-8">
             <div class="relative px-4 sm:px-8 lg:px-12">
               <div class="mx-auto max-w-2xl lg:max-w-5xl">
-                <div class="mx-auto grid max-w-xl grid-cols-1 gap-y-20 lg:max-w-none lg:grid-cols-2">
+                <div class="mx-auto grid max-w-xl grid-cols-1 gap-y-20 lg:max-w-none">
                   <div class="flex flex-col gap-16">
                     <slot />
                   </div>
