--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -23,6 +23,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script src="../scripts/DarkMode.js"></script>
+    <script src="../scripts/NavMobileMenu.js"></script>
   </head>
   <body class="flex h-full flex-col bg-zinc-50 bg-white dark:bg-black dark:text-zinc-100">
 
