--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -67,9 +67,9 @@ import Selfie from '../components/Selfie.astro'
 
             <nav id="mobile-menu" class="hidden mt-6 mobile-menu md:hidden">
               <ul class="-my-2 divide-y divide-zinc-100 text-base text-zinc-800 dark:divide-zinc-100/5 dark:text-zinc-300">
-                <li><a href="/">Home</a></li>
-                <li><a href="/blog">Blog</a></li>
-                <li><a href="/projects">Projects</a></li>
+                <li><a href="/" class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400">Home</a></li>
+                <li><a href="/blog" class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400">Blog</a></li>
+                <li><a href="/projects" class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400">Projects</a></li>
               </ul>
             </nav>
 
