Fix mobile menu doesn't work issue

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import Selfie from '../components/Selfie.astro'
 ---
-<header class="pointer-events-none relative z-50 flex flex-col"
+<header class="pointer-events-auto relative z-50 flex flex-col"
         style="height:var(--header-height);margin-bottom:var(--header-mb)">
   <div class="order-last mt-[calc(theme(spacing.16)-theme(spacing.3))]"></div>
   <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
