--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,9 @@
 ---
 import Selfie from '../components/Selfie.astro'
 ---
-<header class="pointer-events-auto relative z-50 flex flex-col"
-        style="height:var(--header-height);margin-bottom:var(--header-mb)">
-  <div class="order-last mt-[calc(theme(spacing.16)-theme(spacing.3))]"></div>
-    <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
+<header class="pointer-events-auto relative z-50 flex flex-col" >
+  <div class="order-last"></div>
+    <div class="sm:px-8 w-full">
       <div class="mx-auto max-w-7xl lg:px-8">
         <div class="relative px-4 sm:px-8 lg:px-12">
           <div class="mx-auto max-w-2xl lg:max-w-5xl">
