--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -26,7 +26,8 @@ const projects = [
 ---
 
 <Blog>
-  <ul class="grid grid-cols-1 gap-x-12 gap-y-16 sm:grid-cols-2 lg:grid-cols-3">
+  <h1 class="text-4xl">Projects</h1>
+  <ul class="grid grid-cols-1 gap-x-4 gap-y-4 sm:grid-cols-2 lg:grid-cols-3">
     {projects.map((project) => {
       return <li class="group relative flex flex-col items-start">
                <a href={project.url}>
