--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,10 +10,19 @@ const posts = await Astro.glob('../pages/blog/*.md')
   <h1 class="text-4xl pb-8">Blog</h1>
   <ul>
     {posts.map((post) => {
-      // var date = post.frontmatter.date ? post.frontmatter.date
+      console.log("title:", post.frontmatter.title)
+      console.log("date:", post.frontmatter.date)
+      console.log("date:", typeof(post.frontmatter.date))
+
+      var dn = new Date();
+      var ds = format(dn, 'yyyy-MM-dd')
+      if (!!post.frontmatter.date) {
+        ds = format(parseISO(post.frontmatter.date), 'yyyy-MM-dd')
+      }
+
       return <li>
                <h2 class="text-2xl">
-                 <time class="text-xl text-zinc-400 dark:text-zinc-500">{post.frontmatter.date}</time>
+                 <time class="text-xl text-zinc-400 dark:text-zinc-500">{ds}</time>
                  <a href={post.url}>{post.frontmatter.title}</a>
                </h2>
              </li>
